# doc-manager-mcp

./: .doc-manager.yml  .env.template  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMPLETION.md  IMPLEMENTATION-GUIDE.md  MIGRATION.md  NEXT-STEPS.md  OBSERVATIONS.md  README.md  User-observations.md  issues-and-improvements.md  pyproject.toml  requirements.txt  revised-plan.md  server.py  test-registry.json  test_bootstrap.py  test_indexer.py  test_performance.py  test_undocumented_api.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.doc-manager/: dependencies.json
.doc-manager/memory/: repo-baseline.json  symbol-baseline.json
.github/workflows/: publish.yml
claude-plugin/commands/: doc-status.md  doc-sync.md
doc-management/.claude-plugin/: plugin.json
doc-management/agents/: doc-expert.md  doc-writer.md
doc-management/commands/: doc-quality.md
doc-management/hooks/: hooks.json
doc-management/scripts/: check-doc-health.sh
doc_manager_mcp/: constants.py  models.py  server.py  utils.py
doc_manager_mcp/core/: __init__.py  actions.py  config.py  conventions.py  file_scanner.py  markdown_cache.py  patterns.py  project.py
doc_manager_mcp/indexing/: __init__.py  (+5 more)
docs/: README.md  index.md
openspec/: project.md
references/: doc-mapping-patterns.md  doc-platform-selector.md  quality-criteria.md
specs/: 002-tool-architecture-refactor.md
src/: constants.py  models.py  utils.py
tests/: test_e2e.py  test_e2e_security.py  test_e2e_stress.py  test_link_rewriter.py  test_phase3_enhancements.py  test_semantic_diff.py
(+154 files in other folders)
